--- a/details.html
+++ b/details.html
@@ -104,7 +104,7 @@
   <section class="product-detail">
     <div class="gallery">
       <div class="main-image">
-        <img id="mainImage" src="billard4.png" alt="Billard principal">
+        <img id="mainImage" src="billard4.PNG" alt="Billard principal">
       </div>
       <div class="thumbnails">
       <!--  <img class="thumb" src="billard4.png" alt="Vue 1">
