--- a/about.html
+++ b/about.html
@@ -47,72 +47,72 @@
   </nav>
   <div class="carousel-container">
     <div class="carousel-track">
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
 
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
       <!-- Duplique les images pour la boucle infinie -->
-      <img src="billard4.png" alt="Billard 1">
+      <img src="billard4.jpg" alt="Billard 1">
       <img src="billard1.png" alt="Billard 2">
       <img src="billard5.png" alt="Billard 3">
       <img src="billard6.png" alt="Billard 4">
