--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,6 @@
       display: block;
       margin: 15px 0 5px;
     }
-
     .contact-form input,
     .contact-form textarea {
       width: 100%;
@@ -34,7 +33,8 @@
       margin-bottom: 15px;
       background-color: #333;
       color: white;
-    }
+      resize: none; 
+}
 
     .contact-form button {
       padding: 10px 20px;
