--- a/details.html
+++ b/details.html
@@ -118,7 +118,7 @@
       <ul class="features">
         <!--  <li>Bois massif haut de gamme</li>
           <li>Tapis vert anglais professionnel</li>-->
-        <li>Derrière sa sobriété, il révèle un symbole puissant. </li>
+        <li>Billard de haute qualité. Derrière sa sobriété, il révèle un symbole puissant. </li>
         <br/>
         <li>Contactez-nous pour obtenir de plus ample informations,</li>
         <li> tester votre éligibilité et entrer dans un cercle reservé.</li>
