--- a/contact.html
+++ b/contact.html
@@ -63,19 +63,19 @@
 
   <div class="contact-form">
     <h1>Contactez-nous</h1>
-    <form action="billardheritage@gmail.com" method="post" enctype="text/plain">
-      <label for="name">Nom</label>
-      <input type="text" id="name" name="name" required />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Envoyer</button>
-    </form>
-  </div>
+  <form action="https://formspree.io/f/xnnpenre" method="POST">
+    <label for="name">Nom</label>
+    <input type="text" id="name" name="name" required>
+  
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+  
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="5" required></textarea>
+  
+    <button type="submit">Envoyer</button>
+  </form>
+</div>
   <footer>
     <p>&copy; 2025 Billard Héritage. Tous droits réservés.</p>
   </footer>
