--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Table de Billard Unique</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  <link rel="icon" type="image/png" href="/favicon.ico/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.ico/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-<link rel="manifest" href="/favicon.ico/site.webmanifest" />
+<link rel="manifest" href="/site.webmanifest" />
 <body>
   <nav class="navbar">
     <div class="logo">Billard Heritage</div>
